--- a/content/publication/example/cite.bib
+++ b/content/publication/example/cite.bib
@@ -1,8 +1,13 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@article{Backes2021,
+  doi = {10.1038/s41684-021-00724-z},
+  url = {https://doi.org/10.1038/s41684-021-00724-z},
+  year = {2021},
+  month = mar,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {50},
+  number = {5},
+  pages = {127--135},
+  author = {Cassandra Backes and Daniel Martinez-Martinez and Filipe Cabreiro},
+  title = {C. elegans: A biosensor for host{\textendash}microbe interactions},
+  journal = {Lab Animal}
 }
